[package]
name = "reventapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.0"
actix-web = "4.3.1"
csv = "1.2.1"
env_logger = "0.10.0"
futures-util = "0.3.28"
glob = "0.3.1"
log = "0.4.17"
num_cpus = "1.15.0"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
threadpool = "1.8.1"
uuid = "1.3.2"
